# libft

./: .gitignore
Piscine_Realoded/ex00/: exo.tar
Piscine_Realoded/ex02/: .clean.swp  clean
Piscine_Realoded/ex03/: find_sh.sh
Piscine_Realoded/ex04/: MAC.sh
Piscine_Realoded/ex06/: CMakeLists.txt  ft_print_alphabet.c
Piscine_Realoded/ex07/: ft_print_numbers.c
libft/: CMakeLists.txt  Makefile  atoi.c  author  bzero.c  ft_isalpha.c  ft_isascii.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_putchar_fd.c  ft_putendl.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_strchr.c  ft_strncat.c  ft_strncmp.c  ft_strnequ.c  ft_strnlen.c  ft_strnstr.c  ft_strsplit.c  ft_strstr.c  ft_strtrim.c  isalpha.c  isalphanum.c  isascii.c  isdigit.c  isprint.c  libft.h  libft.h.gch  (+9 more)
libft/part2/: CMakeLists.txt  ft_itoa.c  ft_memalloc.c  ft_memdel.c  ft_putchar.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strnew.c  ft_strsplit.c  ft_strtrim.c  libft.h
libft/srcs/: bzero.c  ft_atoi.c  ft_bzero.c  ft_isalnum.c  ft_isdigit.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_strcat.c  ft_strchr.c  ft_strcmp.c  ft_strcpy.c  ft_strdup.c  ft_strlcat.c  ft_strlen.c  ft_strncat.c  ft_strncmp.c  ft_strncpy.c  ft_strrchr.c  ft_strstr.c  ft_tolower.c  ft_toupper.c  isalpha.c  libft.h  memccpy.c  strchr.c  strcmp.c  strdup.c  strlcat.c  strncmp.c  strncpy.c  strnstr.c  strrchr.c
(+22 files in other folders)
